2.2.4/_sources/gallery/mplot3d/contour3d.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_mplot3d_contour3d.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_contour3d.py:


==================================================
Demonstrates plotting contour (level) curves in 3D
==================================================

This is like a contour plot in 2D except that the f(x,y)=c curve is plotted
on the plane z=c.




.. image:: /gallery/mplot3d/images/sphx_glr_contour3d_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    from mpl_toolkits.mplot3d import axes3d
    import matplotlib.pyplot as plt
    from matplotlib import cm

    fig = plt.figure()
    ax = fig.gca(projection='3d')
    X, Y, Z = axes3d.get_test_data(0.05)

    # Plot contour curves
    cset = ax.contour(X, Y, Z, cmap=cm.coolwarm)

    ax.clabel(cset, fontsize=9, inline=1)

    plt.show()


.. _sphx_glr_download_gallery_mplot3d_contour3d.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: contour3d.py <contour3d.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: contour3d.ipynb <contour3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
